Bug 516000 - 16Bit PNGs from Blender are displayed in Krita with incorrect color space.
Summary: 16Bit PNGs from Blender are displayed in Krita with incorrect color space.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 5.2.15
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-14 20:14 UTC by Zafio
Modified: 2026-03-03 19:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
TOP: Blender PNG as intended export, below: (143.58 KB, image/png)
2026-02-14 20:14 UTC, Zafio
Details
16Bit png from Blender (385.04 KB, image/png)
2026-02-14 22:42 UTC, Zafio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zafio 2026-02-14 20:14:12 UTC
Created attachment 189584 [details]
TOP: Blender PNG as intended export, below:

SUMMARY
16Bit PNGs exported from Blender are displayed in Krita with incorrect color space.

STEPS TO REPRODUCE
1.  Paint anything in Blender, save as PNG with default settings.
2.  Open it in Krita

OBSERVED RESULT
Color looks exactly as using "Linear Rec.709" color space profile in blender.
In any other app the same png is displayed with any color issues.

EXPECTED RESULT
Color to display correctly using default srgb color space.

SOFTWARE/OS VERSIONS
Windows:  10


ADDITIONAL INFORMATION
I submited the bug also to Blender, because it was unclear to me which one was the culprit.
And the admins pointed to Krita (unless there was more clear evidence)

Additional explanation for the attached image, from top to bottom:
1: The texture as exported with default settings
2: How the texture looks inside blender, changing the color space to "linear rec.709"
3: Left: exact same texture 16bit png exported with default settings and SRGB color space, compared with the same texture exported in 8bit.
Comment 1 Dmitry Kazakov 2026-02-14 21:40:38 UTC
Hi, Zafio!

The default color space for 16-bit RGB images in Krita is "Linear rec.709", indeed. Ideally, you should somehow instruct Blender to attach an ICC profile to the image.

Alternatively, you could use "Assign Profile" script, and reset the image profile to sRGB:

1) In the Python settings enable "Assign Profile" script
2) Assing "sRGB-elle-V2-srgbtrc.icc" in Scripts->Assign Profile...


Could you please also attach a PNG file that has this issue, so I could check it locally?
Comment 2 Zafio 2026-02-14 22:42:17 UTC
Created attachment 189596 [details]
16Bit png from Blender
Comment 3 Zafio 2026-02-14 23:06:20 UTC
Hi Dmitry!

> Could you please also attach a PNG file that has this issue, so I could
> check it locally?

Sure! just added the very same png!

I've tried to export the png from blender, changing the export color space option to Linear Rec.709, and then indeed, it opens correctly in Krita... But every other apps shows the color darker... including Blender if I load it again in a new project... 

P.S.: Forgot to mention something important: I didn't have this problem until recently, and just downloaded and opened the png in 5.2.11 without issues.
I dont mind going the extra mile to solve this issue (will try what you suggest) but if previous versions didn't have this problem with blender files... and any other apps don't have it either...



(In reply to Dmitry Kazakov from comment #1)
> Hi, Zafio!
> 
> The default color space for 16-bit RGB images in Krita is "Linear rec.709",
> indeed. Ideally, you should somehow instruct Blender to attach an ICC
> profile to the image.
> 
> Alternatively, you could use "Assign Profile" script, and reset the image
> profile to sRGB:
> 
> 1) In the Python settings enable "Assign Profile" script
> 2) Assing "sRGB-elle-V2-srgbtrc.icc" in Scripts->Assign Profile...
> 
> 
> Could you please also attach a PNG file that has this issue, so I could
> check it locally?
Comment 4 Dmitry Kazakov 2026-03-02 12:27:30 UTC
Hi, Zafio!

> Sure! just added the very same png!

When I try to open your image in Krita, Krita asks me about the color space the PNG is encoded in. If I select `sRGB-elle-V2-srgbtrc.icc`, then the image seems to open correctly. Do you have this dialog on opening the image? And if yes, what do you select there?

You can also check what settings you have in Preferences->Color Management->When Pasting From Other Applications and set it to "Ask".
Comment 5 Dmitry Kazakov 2026-03-02 12:27:44 UTC
Setting to needsinfo
Comment 6 emilianh 2026-03-02 15:41:06 UTC
(In reply to Dmitry Kazakov from comment #4)
> Hi, Zafio!
> 
> > Sure! just added the very same png!
> 
> When I try to open your image in Krita, Krita asks me about the color space
> the PNG is encoded in. If I select `sRGB-elle-V2-srgbtrc.icc`, then the
> image seems to open correctly. Do you have this dialog on opening the image?
> And if yes, what do you select there?
> 
> You can also check what settings you have in Preferences->Color
> Management->When Pasting From Other Applications and set it to "Ask".

Hi,
I also experience this issue and neither Krita 5.2 nor the 5.3/6.0 betas ofer this dialog on File->Open, or Drag&Drop, or OpenWith from file manager. Setting mentioned is set to Ask.
I only get the "Missing Colour Profile" with  As Web(sRGB)/As on Monitor choices dialog when using Edit->Paste into new image.
Comment 7 Zafio 2026-03-02 18:27:45 UTC
(In reply to Dmitry Kazakov from comment #4)

> When I try to open your image in Krita, Krita asks me about the color space
> the PNG is encoded in. If I select `sRGB-elle-V2-srgbtrc.icc`, then the
> image seems to open correctly. Do you have this dialog on opening the image?
> And if yes, what do you select there?
> 
> You can also check what settings you have in Preferences->Color
> Management->When Pasting From Other Applications and set it to "Ask".

I didn't have the dialog, I had "assume srgb" checked, I set it to "ask" and tried that profile you mention and it works,  plus "srgb built in" and "srgb IEC61966.2.1" also work.
Ignorant as I am (on the technical side of things), I would assume that "assume srgb" would equal to "assume srgb builtin"...

Anyway, I would say the issue is solved for me at least, so thank you!
Comment 8 Bug Janitor Service 2026-03-03 03:49:37 UTC
๐Ÿ›๐Ÿงน Thanks for your comment!

Automatically switching the status to REPORTED so the team can perform further triage.

In the future you may also do this yourself when providing needed information.
Comment 9 Dmitry Kazakov 2026-03-03 12:09:58 UTC
Git commit b7052405130d5c0710fc0c78f79c80c8f7f4d472 by Dmitry Kazakov.
Committed on 03/03/2026 at 12:09.
Pushed by dkazakov into branch 'master'.

Use actual sRGB color space for untagged PNG images

...and not the Krita-default, which is scRGB for 16-bit images.

In the preferences we have an option telling that the pasted images
will be loaded as sRGB, which means that they should actually be loaded
as sRGB, and not as something else.

M  +3    -3    libs/ui/kis_png_converter.cpp

https://invent.kde.org/graphics/krita/-/commit/b7052405130d5c0710fc0c78f79c80c8f7f4d472
Comment 10 Dmitry Kazakov 2026-03-03 12:10:15 UTC
Git commit 53e11673b3f13dbbda70521a324103df4098a898 by Dmitry Kazakov.
Committed on 03/03/2026 at 12:10.
Pushed by dkazakov into branch 'krita/6.0'.

Use actual sRGB color space for untagged PNG images

...and not the Krita-default, which is scRGB for 16-bit images.

In the preferences we have an option telling that the pasted images
will be loaded as sRGB, which means that they should actually be loaded
as sRGB, and not as something else.

M  +3    -3    libs/ui/kis_png_converter.cpp

https://invent.kde.org/graphics/krita/-/commit/53e11673b3f13dbbda70521a324103df4098a898
Comment 11 Dmitry Kazakov 2026-03-03 12:10:59 UTC
Hi, Zafio!

I have pushed a fix that makes the things a little bit less confusing. Now the untagged images are just loaded as sRGB.
Comment 12 Zafio 2026-03-03 19:58:49 UTC
(In reply to Dmitry Kazakov from comment #11)
> Hi, Zafio!
> 
> I have pushed a fix that makes the things a little bit less confusing. Now
> the untagged images are just loaded as sRGB.

Glad to know, thank you!