Use actual sRGB color space for untagged PNG images

...and not the Krita-default, which is scRGB for 16-bit images.

In the preferences we have an option telling that the pasted images
will be loaded as sRGB, which means that they should actually be loaded
as sRGB, and not as something else.

BUG:516000